'use strict';
Object.defineProperty(exports, '__esModule', {value: !0}),
  (exports.SchedulableTransactionBody =
    exports.ScheduleCreateTransactionBody =
    exports.TokenFeeScheduleUpdateTransactionBody =
    exports.TokenDissociateTransactionBody =
    exports.TokenAssociateTransactionBody =
    exports.TokenWipeAccountTransactionBody =
    exports.TokenBurnTransactionBody =
    exports.TokenMintTransactionBody =
    exports.TokenUpdateTransactionBody =
    exports.TokenDeleteTransactionBody =
    exports.TokenRevokeKycTransactionBody =
    exports.TokenGrantKycTransactionBody =
    exports.TokenUnfreezeAccountTransactionBody =
    exports.TokenFreezeAccountTransactionBody =
    exports.RoyaltyFee =
    exports.AssessedCustomFee =
    exports.CustomFee =
    exports.FixedFee =
    exports.FractionalFee =
    exports.TokenCreateTransactionBody =
    exports.UncheckedSubmitBody =
    exports.ConsensusSubmitMessageTransactionBody =
    exports.ConsensusMessageChunkInfo =
    exports.ConsensusUpdateTopicTransactionBody =
    exports.ContractDeleteTransactionBody =
    exports.FileUpdateTransactionBody =
    exports.FileDeleteTransactionBody =
    exports.FileCreateTransactionBody =
    exports.FileAppendTransactionBody =
    exports.CryptoUpdateTransactionBody =
    exports.CryptoTransferTransactionBody =
    exports.CryptoDeleteLiveHashTransactionBody =
    exports.CryptoDeleteTransactionBody =
    exports.CryptoCreateTransactionBody =
    exports.CryptoAddLiveHashTransactionBody =
    exports.LiveHash =
    exports.ContractUpdateTransactionBody =
    exports.ContractCreateTransactionBody =
    exports.ContractCallTransactionBody =
    exports.FreezeTransactionBody =
    exports.SystemUndeleteTransactionBody =
    exports.SystemDeleteTransactionBody =
    exports.TransactionBody =
    exports.Transaction =
    exports.QueryHeader =
    exports.ResponseType =
    exports.ConsensusGetTopicInfoResponse =
    exports.ConsensusGetTopicInfoQuery =
    exports.ConsensusDeleteTopicTransactionBody =
    exports.Duration =
    exports.ConsensusCreateTopicTransactionBody =
    exports.TimestampSeconds =
    exports.Timestamp =
    exports.TokenBalances =
    exports.TokenBalance =
    exports.TokenRelationship =
    exports.ServicesConfigurationList =
    exports.Setting =
    exports.SemanticVersion =
    exports.NodeAddressBook =
    exports.NodeAddress =
    exports.ServiceEndpoint =
    exports.CurrentAndNextFeeSchedule =
    exports.FeeSchedule =
    exports.FeeData =
    exports.TransactionFeeSchedule =
    exports.FeeComponents =
    exports.HederaFunctionality =
    exports.SignatureMap =
    exports.SignaturePair =
    exports.SignatureList =
    exports.ThresholdSignature =
    exports.Signature =
    exports.KeyList =
    exports.ThresholdKey =
    exports.Key =
    exports.TokenKycStatus =
    exports.TokenFreezeStatus =
    exports.TokenSupplyType =
    exports.SubType =
    exports.TokenType =
    exports.ScheduleID =
    exports.TokenID =
    exports.TopicID =
    exports.Fraction =
    exports.TokenTransferList =
    exports.NftTransfer =
    exports.TransferList =
    exports.AccountAmount =
    exports.TransactionID =
    exports.ContractID =
    exports.FileID =
    exports.AccountID =
    exports.RealmID =
    exports.ShardID =
    exports.AllAccountBalances =
    exports.SingleAccountBalances =
    exports.TokenUnitBalance =
    exports.Writer =
    exports.Reader =
      void 0),
  (exports.FreezeType =
    exports.TokenPauseStatus =
    exports.TokenUnpauseTransactionBody =
    exports.TokenPauseTransactionBody =
    exports.BytesValue =
    exports.StringValue =
    exports.BoolValue =
    exports.UInt32Value =
    exports.UInt64Value =
    exports.FloatValue =
    exports.DoubleValue =
    exports.TransactionList =
    exports.SignedTransaction =
    exports.TokenService =
    exports.ThrottleDefinitions =
    exports.ThrottleBucket =
    exports.ThrottleGroup =
    exports.SmartContractService =
    exports.ScheduleService =
    exports.NetworkService =
    exports.MirrorConsensusService =
    exports.ConsensusTopicResponse =
    exports.ConsensusTopicQuery =
    exports.FreezeService =
    exports.FileService =
    exports.CryptoService =
    exports.Response =
    exports.TokenGetNftInfosResponse =
    exports.TokenGetNftInfosQuery =
    exports.TokenGetNftInfoResponse =
    exports.TokenNftInfo =
    exports.TokenGetNftInfoQuery =
    exports.NftID =
    exports.TokenGetAccountNftInfosResponse =
    exports.TokenGetAccountNftInfosQuery =
    exports.ScheduleGetInfoResponse =
    exports.ScheduleInfo =
    exports.ScheduleGetInfoQuery =
    exports.TokenGetInfoResponse =
    exports.TokenInfo =
    exports.TokenGetInfoQuery =
    exports.NetworkGetVersionInfoResponse =
    exports.NetworkGetVersionInfoQuery =
    exports.TransactionGetFastRecordResponse =
    exports.TransactionGetFastRecordQuery =
    exports.TransactionGetRecordResponse =
    exports.TransactionGetRecordQuery =
    exports.TransactionGetReceiptResponse =
    exports.TransactionGetReceiptQuery =
    exports.FileInfo =
    exports.FileGetInfoResponse =
    exports.FileGetInfoQuery =
    exports.FileContents =
    exports.FileGetContentsResponse =
    exports.FileGetContentsQuery =
    exports.CryptoGetStakersResponse =
    exports.AllProxyStakers =
    exports.ProxyStaker =
    exports.CryptoGetStakersQuery =
    exports.CryptoGetLiveHashResponse =
    exports.CryptoGetLiveHashQuery =
    exports.AccountInfo =
    exports.CryptoGetInfoResponse =
    exports.CryptoGetInfoQuery =
    exports.CryptoGetAccountRecordsResponse =
    exports.CryptoGetAccountRecordsQuery =
    exports.CryptoGetAccountBalanceResponse =
    exports.CryptoGetAccountBalanceQuery =
    exports.ExchangeRateSet =
    exports.ExchangeRate =
    exports.TransactionReceipt =
    exports.TransactionRecord =
    exports.ContractGetRecordsResponse =
    exports.ContractGetRecordsQuery =
    exports.ContractGetBytecodeResponse =
    exports.ContractGetBytecodeQuery =
    exports.ContractInfo =
    exports.ContractGetInfoResponse =
    exports.ContractGetInfoQuery =
    exports.ContractCallLocalResponse =
    exports.ContractCallLocalQuery =
    exports.ContractFunctionResult =
    exports.ContractLoginfo =
    exports.GetBySolidityIDResponse =
    exports.GetBySolidityIDQuery =
    exports.GetByKeyResponse =
    exports.EntityID =
    exports.GetByKeyQuery =
    exports.Query =
    exports.ConsensusService =
    exports.ConsensusTopicInfo =
    exports.ResponseCodeEnum =
    exports.TransactionResponse =
    exports.ResponseHeader =
    exports.ScheduleSignTransactionBody =
    exports.ScheduleDeleteTransactionBody =
      void 0);
var $protobuf = _interopRequireWildcard(require('protobufjs/minimal.js')),
  _proto = require('./proto.js');
function _getRequireWildcardCache(a) {
  if ('function' != typeof WeakMap) return null;
  var b = new WeakMap(),
    c = new WeakMap();
  return (_getRequireWildcardCache = function (a) {
    return a ? c : b;
  })(a);
}
function _interopRequireWildcard(a, b) {
  if (!b && a && a.__esModule) return a;
  if (null === a || ('object' != typeof a && 'function' != typeof a)) return {default: a};
  var c = _getRequireWildcardCache(b);
  if (c && c.has(a)) return c.get(a);
  var d = {},
    e = Object.defineProperty && Object.getOwnPropertyDescriptor;
  for (var f in a)
    if ('default' != f && Object.prototype.hasOwnProperty.call(a, f)) {
      var g = e ? Object.getOwnPropertyDescriptor(a, f) : null;
      g && (g.get || g.set) ? Object.defineProperty(d, f, g) : (d[f] = a[f]);
    }
  return (d.default = a), c && c.set(a, d), d;
}
const Reader = $protobuf.Reader;
exports.Reader = Reader;
const Writer = $protobuf.Writer;
exports.Writer = Writer;
const TokenUnitBalance = _proto.proto.TokenUnitBalance;
exports.TokenUnitBalance = TokenUnitBalance;
const SingleAccountBalances = _proto.proto.SingleAccountBalances;
exports.SingleAccountBalances = SingleAccountBalances;
const AllAccountBalances = _proto.proto.AllAccountBalances;
exports.AllAccountBalances = AllAccountBalances;
const ShardID = _proto.proto.ShardID;
exports.ShardID = ShardID;
const RealmID = _proto.proto.RealmID;
exports.RealmID = RealmID;
const AccountID = _proto.proto.AccountID;
exports.AccountID = AccountID;
const FileID = _proto.proto.FileID;
exports.FileID = FileID;
const ContractID = _proto.proto.ContractID;
exports.ContractID = ContractID;
const TransactionID = _proto.proto.TransactionID;
exports.TransactionID = TransactionID;
const AccountAmount = _proto.proto.AccountAmount;
exports.AccountAmount = AccountAmount;
const TransferList = _proto.proto.TransferList;
exports.TransferList = TransferList;
const NftTransfer = _proto.proto.NftTransfer;
exports.NftTransfer = NftTransfer;
const TokenTransferList = _proto.proto.TokenTransferList;
exports.TokenTransferList = TokenTransferList;
const Fraction = _proto.proto.Fraction;
exports.Fraction = Fraction;
const TopicID = _proto.proto.TopicID;
exports.TopicID = TopicID;
const TokenID = _proto.proto.TokenID;
exports.TokenID = TokenID;
const ScheduleID = _proto.proto.ScheduleID;
exports.ScheduleID = ScheduleID;
const TokenType = _proto.proto.TokenType;
exports.TokenType = TokenType;
const SubType = _proto.proto.SubType;
exports.SubType = SubType;
const TokenSupplyType = _proto.proto.TokenSupplyType;
exports.TokenSupplyType = TokenSupplyType;
const TokenFreezeStatus = _proto.proto.TokenFreezeStatus;
exports.TokenFreezeStatus = TokenFreezeStatus;
const TokenKycStatus = _proto.proto.TokenKycStatus;
exports.TokenKycStatus = TokenKycStatus;
const Key = _proto.proto.Key;
exports.Key = Key;
const ThresholdKey = _proto.proto.ThresholdKey;
exports.ThresholdKey = ThresholdKey;
const KeyList = _proto.proto.KeyList;
exports.KeyList = KeyList;
const Signature = _proto.proto.Signature;
exports.Signature = Signature;
const ThresholdSignature = _proto.proto.ThresholdSignature;
exports.ThresholdSignature = ThresholdSignature;
const SignatureList = _proto.proto.SignatureList;
exports.SignatureList = SignatureList;
const SignaturePair = _proto.proto.SignaturePair;
exports.SignaturePair = SignaturePair;
const SignatureMap = _proto.proto.SignatureMap;
exports.SignatureMap = SignatureMap;
const HederaFunctionality = _proto.proto.HederaFunctionality;
exports.HederaFunctionality = HederaFunctionality;
const FeeComponents = _proto.proto.FeeComponents;
exports.FeeComponents = FeeComponents;
const TransactionFeeSchedule = _proto.proto.TransactionFeeSchedule;
exports.TransactionFeeSchedule = TransactionFeeSchedule;
const FeeData = _proto.proto.FeeData;
exports.FeeData = FeeData;
const FeeSchedule = _proto.proto.FeeSchedule;
exports.FeeSchedule = FeeSchedule;
const CurrentAndNextFeeSchedule = _proto.proto.CurrentAndNextFeeSchedule;
exports.CurrentAndNextFeeSchedule = CurrentAndNextFeeSchedule;
const ServiceEndpoint = _proto.proto.ServiceEndpoint;
exports.ServiceEndpoint = ServiceEndpoint;
const NodeAddress = _proto.proto.NodeAddress;
exports.NodeAddress = NodeAddress;
const NodeAddressBook = _proto.proto.NodeAddressBook;
exports.NodeAddressBook = NodeAddressBook;
const SemanticVersion = _proto.proto.SemanticVersion;
exports.SemanticVersion = SemanticVersion;
const Setting = _proto.proto.Setting;
exports.Setting = Setting;
const ServicesConfigurationList = _proto.proto.ServicesConfigurationList;
exports.ServicesConfigurationList = ServicesConfigurationList;
const TokenRelationship = _proto.proto.TokenRelationship;
exports.TokenRelationship = TokenRelationship;
const TokenBalance = _proto.proto.TokenBalance;
exports.TokenBalance = TokenBalance;
const TokenBalances = _proto.proto.TokenBalances;
exports.TokenBalances = TokenBalances;
const Timestamp = _proto.proto.Timestamp;
exports.Timestamp = Timestamp;
const TimestampSeconds = _proto.proto.TimestampSeconds;
exports.TimestampSeconds = TimestampSeconds;
const ConsensusCreateTopicTransactionBody = _proto.proto.ConsensusCreateTopicTransactionBody;
exports.ConsensusCreateTopicTransactionBody = ConsensusCreateTopicTransactionBody;
const Duration = _proto.proto.Duration;
exports.Duration = Duration;
const ConsensusDeleteTopicTransactionBody = _proto.proto.ConsensusDeleteTopicTransactionBody;
exports.ConsensusDeleteTopicTransactionBody = ConsensusDeleteTopicTransactionBody;
const ConsensusGetTopicInfoQuery = _proto.proto.ConsensusGetTopicInfoQuery;
exports.ConsensusGetTopicInfoQuery = ConsensusGetTopicInfoQuery;
const ConsensusGetTopicInfoResponse = _proto.proto.ConsensusGetTopicInfoResponse;
exports.ConsensusGetTopicInfoResponse = ConsensusGetTopicInfoResponse;
const ResponseType = _proto.proto.ResponseType;
exports.ResponseType = ResponseType;
const QueryHeader = _proto.proto.QueryHeader;
exports.QueryHeader = QueryHeader;
const Transaction = _proto.proto.Transaction;
exports.Transaction = Transaction;
const TransactionBody = _proto.proto.TransactionBody;
exports.TransactionBody = TransactionBody;
const SystemDeleteTransactionBody = _proto.proto.SystemDeleteTransactionBody;
exports.SystemDeleteTransactionBody = SystemDeleteTransactionBody;
const SystemUndeleteTransactionBody = _proto.proto.SystemUndeleteTransactionBody;
exports.SystemUndeleteTransactionBody = SystemUndeleteTransactionBody;
const FreezeTransactionBody = _proto.proto.FreezeTransactionBody;
exports.FreezeTransactionBody = FreezeTransactionBody;
const ContractCallTransactionBody = _proto.proto.ContractCallTransactionBody;
exports.ContractCallTransactionBody = ContractCallTransactionBody;
const ContractCreateTransactionBody = _proto.proto.ContractCreateTransactionBody;
exports.ContractCreateTransactionBody = ContractCreateTransactionBody;
const ContractUpdateTransactionBody = _proto.proto.ContractUpdateTransactionBody;
exports.ContractUpdateTransactionBody = ContractUpdateTransactionBody;
const LiveHash = _proto.proto.LiveHash;
exports.LiveHash = LiveHash;
const CryptoAddLiveHashTransactionBody = _proto.proto.CryptoAddLiveHashTransactionBody;
exports.CryptoAddLiveHashTransactionBody = CryptoAddLiveHashTransactionBody;
const CryptoCreateTransactionBody = _proto.proto.CryptoCreateTransactionBody;
exports.CryptoCreateTransactionBody = CryptoCreateTransactionBody;
const CryptoDeleteTransactionBody = _proto.proto.CryptoDeleteTransactionBody;
exports.CryptoDeleteTransactionBody = CryptoDeleteTransactionBody;
const CryptoDeleteLiveHashTransactionBody = _proto.proto.CryptoDeleteLiveHashTransactionBody;
exports.CryptoDeleteLiveHashTransactionBody = CryptoDeleteLiveHashTransactionBody;
const CryptoTransferTransactionBody = _proto.proto.CryptoTransferTransactionBody;
exports.CryptoTransferTransactionBody = CryptoTransferTransactionBody;
const CryptoUpdateTransactionBody = _proto.proto.CryptoUpdateTransactionBody;
exports.CryptoUpdateTransactionBody = CryptoUpdateTransactionBody;
const FileAppendTransactionBody = _proto.proto.FileAppendTransactionBody;
exports.FileAppendTransactionBody = FileAppendTransactionBody;
const FileCreateTransactionBody = _proto.proto.FileCreateTransactionBody;
exports.FileCreateTransactionBody = FileCreateTransactionBody;
const FileDeleteTransactionBody = _proto.proto.FileDeleteTransactionBody;
exports.FileDeleteTransactionBody = FileDeleteTransactionBody;
const FileUpdateTransactionBody = _proto.proto.FileUpdateTransactionBody;
exports.FileUpdateTransactionBody = FileUpdateTransactionBody;
const ContractDeleteTransactionBody = _proto.proto.ContractDeleteTransactionBody;
exports.ContractDeleteTransactionBody = ContractDeleteTransactionBody;
const ConsensusUpdateTopicTransactionBody = _proto.proto.ConsensusUpdateTopicTransactionBody;
exports.ConsensusUpdateTopicTransactionBody = ConsensusUpdateTopicTransactionBody;
const ConsensusMessageChunkInfo = _proto.proto.ConsensusMessageChunkInfo;
exports.ConsensusMessageChunkInfo = ConsensusMessageChunkInfo;
const ConsensusSubmitMessageTransactionBody = _proto.proto.ConsensusSubmitMessageTransactionBody;
exports.ConsensusSubmitMessageTransactionBody = ConsensusSubmitMessageTransactionBody;
const UncheckedSubmitBody = _proto.proto.UncheckedSubmitBody;
exports.UncheckedSubmitBody = UncheckedSubmitBody;
const TokenCreateTransactionBody = _proto.proto.TokenCreateTransactionBody;
exports.TokenCreateTransactionBody = TokenCreateTransactionBody;
const FractionalFee = _proto.proto.FractionalFee;
exports.FractionalFee = FractionalFee;
const FixedFee = _proto.proto.FixedFee;
exports.FixedFee = FixedFee;
const CustomFee = _proto.proto.CustomFee;
exports.CustomFee = CustomFee;
const AssessedCustomFee = _proto.proto.AssessedCustomFee;
exports.AssessedCustomFee = AssessedCustomFee;
const RoyaltyFee = _proto.proto.RoyaltyFee;
exports.RoyaltyFee = RoyaltyFee;
const TokenFreezeAccountTransactionBody = _proto.proto.TokenFreezeAccountTransactionBody;
exports.TokenFreezeAccountTransactionBody = TokenFreezeAccountTransactionBody;
const TokenUnfreezeAccountTransactionBody = _proto.proto.TokenUnfreezeAccountTransactionBody;
exports.TokenUnfreezeAccountTransactionBody = TokenUnfreezeAccountTransactionBody;
const TokenGrantKycTransactionBody = _proto.proto.TokenGrantKycTransactionBody;
exports.TokenGrantKycTransactionBody = TokenGrantKycTransactionBody;
const TokenRevokeKycTransactionBody = _proto.proto.TokenRevokeKycTransactionBody;
exports.TokenRevokeKycTransactionBody = TokenRevokeKycTransactionBody;
const TokenDeleteTransactionBody = _proto.proto.TokenDeleteTransactionBody;
exports.TokenDeleteTransactionBody = TokenDeleteTransactionBody;
const TokenUpdateTransactionBody = _proto.proto.TokenUpdateTransactionBody;
exports.TokenUpdateTransactionBody = TokenUpdateTransactionBody;
const TokenMintTransactionBody = _proto.proto.TokenMintTransactionBody;
exports.TokenMintTransactionBody = TokenMintTransactionBody;
const TokenBurnTransactionBody = _proto.proto.TokenBurnTransactionBody;
exports.TokenBurnTransactionBody = TokenBurnTransactionBody;
const TokenWipeAccountTransactionBody = _proto.proto.TokenWipeAccountTransactionBody;
exports.TokenWipeAccountTransactionBody = TokenWipeAccountTransactionBody;
const TokenAssociateTransactionBody = _proto.proto.TokenAssociateTransactionBody;
exports.TokenAssociateTransactionBody = TokenAssociateTransactionBody;
const TokenDissociateTransactionBody = _proto.proto.TokenDissociateTransactionBody;
exports.TokenDissociateTransactionBody = TokenDissociateTransactionBody;
const TokenFeeScheduleUpdateTransactionBody = _proto.proto.TokenFeeScheduleUpdateTransactionBody;
exports.TokenFeeScheduleUpdateTransactionBody = TokenFeeScheduleUpdateTransactionBody;
const ScheduleCreateTransactionBody = _proto.proto.ScheduleCreateTransactionBody;
exports.ScheduleCreateTransactionBody = ScheduleCreateTransactionBody;
const SchedulableTransactionBody = _proto.proto.SchedulableTransactionBody;
exports.SchedulableTransactionBody = SchedulableTransactionBody;
const ScheduleDeleteTransactionBody = _proto.proto.ScheduleDeleteTransactionBody;
exports.ScheduleDeleteTransactionBody = ScheduleDeleteTransactionBody;
const ScheduleSignTransactionBody = _proto.proto.ScheduleSignTransactionBody;
exports.ScheduleSignTransactionBody = ScheduleSignTransactionBody;
const ResponseHeader = _proto.proto.ResponseHeader;
exports.ResponseHeader = ResponseHeader;
const TransactionResponse = _proto.proto.TransactionResponse;
exports.TransactionResponse = TransactionResponse;
const ResponseCodeEnum = _proto.proto.ResponseCodeEnum;
exports.ResponseCodeEnum = ResponseCodeEnum;
const ConsensusTopicInfo = _proto.proto.ConsensusTopicInfo;
exports.ConsensusTopicInfo = ConsensusTopicInfo;
const ConsensusService = _proto.proto.ConsensusService;
exports.ConsensusService = ConsensusService;
const Query = _proto.proto.Query;
exports.Query = Query;
const GetByKeyQuery = _proto.proto.GetByKeyQuery;
exports.GetByKeyQuery = GetByKeyQuery;
const EntityID = _proto.proto.EntityID;
exports.EntityID = EntityID;
const GetByKeyResponse = _proto.proto.GetByKeyResponse;
exports.GetByKeyResponse = GetByKeyResponse;
const GetBySolidityIDQuery = _proto.proto.GetBySolidityIDQuery;
exports.GetBySolidityIDQuery = GetBySolidityIDQuery;
const GetBySolidityIDResponse = _proto.proto.GetBySolidityIDResponse;
exports.GetBySolidityIDResponse = GetBySolidityIDResponse;
const ContractLoginfo = _proto.proto.ContractLoginfo;
exports.ContractLoginfo = ContractLoginfo;
const ContractFunctionResult = _proto.proto.ContractFunctionResult;
exports.ContractFunctionResult = ContractFunctionResult;
const ContractCallLocalQuery = _proto.proto.ContractCallLocalQuery;
exports.ContractCallLocalQuery = ContractCallLocalQuery;
const ContractCallLocalResponse = _proto.proto.ContractCallLocalResponse;
exports.ContractCallLocalResponse = ContractCallLocalResponse;
const ContractGetInfoQuery = _proto.proto.ContractGetInfoQuery;
exports.ContractGetInfoQuery = ContractGetInfoQuery;
const ContractGetInfoResponse = _proto.proto.ContractGetInfoResponse;
exports.ContractGetInfoResponse = ContractGetInfoResponse;
const ContractInfo = _proto.proto.ContractGetInfoResponse.ContractInfo;
exports.ContractInfo = ContractInfo;
const ContractGetBytecodeQuery = _proto.proto.ContractGetBytecodeQuery;
exports.ContractGetBytecodeQuery = ContractGetBytecodeQuery;
const ContractGetBytecodeResponse = _proto.proto.ContractGetBytecodeResponse;
exports.ContractGetBytecodeResponse = ContractGetBytecodeResponse;
const ContractGetRecordsQuery = _proto.proto.ContractGetRecordsQuery;
exports.ContractGetRecordsQuery = ContractGetRecordsQuery;
const ContractGetRecordsResponse = _proto.proto.ContractGetRecordsResponse;
exports.ContractGetRecordsResponse = ContractGetRecordsResponse;
const TransactionRecord = _proto.proto.TransactionRecord;
exports.TransactionRecord = TransactionRecord;
const TransactionReceipt = _proto.proto.TransactionReceipt;
exports.TransactionReceipt = TransactionReceipt;
const ExchangeRate = _proto.proto.ExchangeRate;
exports.ExchangeRate = ExchangeRate;
const ExchangeRateSet = _proto.proto.ExchangeRateSet;
exports.ExchangeRateSet = ExchangeRateSet;
const CryptoGetAccountBalanceQuery = _proto.proto.CryptoGetAccountBalanceQuery;
exports.CryptoGetAccountBalanceQuery = CryptoGetAccountBalanceQuery;
const CryptoGetAccountBalanceResponse = _proto.proto.CryptoGetAccountBalanceResponse;
exports.CryptoGetAccountBalanceResponse = CryptoGetAccountBalanceResponse;
const CryptoGetAccountRecordsQuery = _proto.proto.CryptoGetAccountRecordsQuery;
exports.CryptoGetAccountRecordsQuery = CryptoGetAccountRecordsQuery;
const CryptoGetAccountRecordsResponse = _proto.proto.CryptoGetAccountRecordsResponse;
exports.CryptoGetAccountRecordsResponse = CryptoGetAccountRecordsResponse;
const CryptoGetInfoQuery = _proto.proto.CryptoGetInfoQuery;
exports.CryptoGetInfoQuery = CryptoGetInfoQuery;
const CryptoGetInfoResponse = _proto.proto.CryptoGetInfoResponse;
exports.CryptoGetInfoResponse = CryptoGetInfoResponse;
const AccountInfo = _proto.proto.CryptoGetInfoResponse.AccountInfo;
exports.AccountInfo = AccountInfo;
const CryptoGetLiveHashQuery = _proto.proto.CryptoGetLiveHashQuery;
exports.CryptoGetLiveHashQuery = CryptoGetLiveHashQuery;
const CryptoGetLiveHashResponse = _proto.proto.CryptoGetLiveHashResponse;
exports.CryptoGetLiveHashResponse = CryptoGetLiveHashResponse;
const CryptoGetStakersQuery = _proto.proto.CryptoGetStakersQuery;
exports.CryptoGetStakersQuery = CryptoGetStakersQuery;
const ProxyStaker = _proto.proto.ProxyStaker;
exports.ProxyStaker = ProxyStaker;
const AllProxyStakers = _proto.proto.AllProxyStakers;
exports.AllProxyStakers = AllProxyStakers;
const CryptoGetStakersResponse = _proto.proto.CryptoGetStakersResponse;
exports.CryptoGetStakersResponse = CryptoGetStakersResponse;
const FileGetContentsQuery = _proto.proto.FileGetContentsQuery;
exports.FileGetContentsQuery = FileGetContentsQuery;
const FileGetContentsResponse = _proto.proto.FileGetContentsResponse;
exports.FileGetContentsResponse = FileGetContentsResponse;
const FileContents = _proto.proto.FileGetContentsResponse.FileContents;
exports.FileContents = FileContents;
const FileGetInfoQuery = _proto.proto.FileGetInfoQuery;
exports.FileGetInfoQuery = FileGetInfoQuery;
const FileGetInfoResponse = _proto.proto.FileGetInfoResponse;
exports.FileGetInfoResponse = FileGetInfoResponse;
const FileInfo = _proto.proto.FileGetInfoResponse.FileInfo;
exports.FileInfo = FileInfo;
const TransactionGetReceiptQuery = _proto.proto.TransactionGetReceiptQuery;
exports.TransactionGetReceiptQuery = TransactionGetReceiptQuery;
const TransactionGetReceiptResponse = _proto.proto.TransactionGetReceiptResponse;
exports.TransactionGetReceiptResponse = TransactionGetReceiptResponse;
const TransactionGetRecordQuery = _proto.proto.TransactionGetRecordQuery;
exports.TransactionGetRecordQuery = TransactionGetRecordQuery;
const TransactionGetRecordResponse = _proto.proto.TransactionGetRecordResponse;
exports.TransactionGetRecordResponse = TransactionGetRecordResponse;
const TransactionGetFastRecordQuery = _proto.proto.TransactionGetFastRecordQuery;
exports.TransactionGetFastRecordQuery = TransactionGetFastRecordQuery;
const TransactionGetFastRecordResponse = _proto.proto.TransactionGetFastRecordResponse;
exports.TransactionGetFastRecordResponse = TransactionGetFastRecordResponse;
const NetworkGetVersionInfoQuery = _proto.proto.NetworkGetVersionInfoQuery;
exports.NetworkGetVersionInfoQuery = NetworkGetVersionInfoQuery;
const NetworkGetVersionInfoResponse = _proto.proto.NetworkGetVersionInfoResponse;
exports.NetworkGetVersionInfoResponse = NetworkGetVersionInfoResponse;
const TokenGetInfoQuery = _proto.proto.TokenGetInfoQuery;
exports.TokenGetInfoQuery = TokenGetInfoQuery;
const TokenInfo = _proto.proto.TokenInfo;
exports.TokenInfo = TokenInfo;
const TokenGetInfoResponse = _proto.proto.TokenGetInfoResponse;
exports.TokenGetInfoResponse = TokenGetInfoResponse;
const ScheduleGetInfoQuery = _proto.proto.ScheduleGetInfoQuery;
exports.ScheduleGetInfoQuery = ScheduleGetInfoQuery;
const ScheduleInfo = _proto.proto.ScheduleInfo;
exports.ScheduleInfo = ScheduleInfo;
const ScheduleGetInfoResponse = _proto.proto.ScheduleGetInfoResponse;
exports.ScheduleGetInfoResponse = ScheduleGetInfoResponse;
const TokenGetAccountNftInfosQuery = _proto.proto.TokenGetAccountNftInfosQuery;
exports.TokenGetAccountNftInfosQuery = TokenGetAccountNftInfosQuery;
const TokenGetAccountNftInfosResponse = _proto.proto.TokenGetAccountNftInfosResponse;
exports.TokenGetAccountNftInfosResponse = TokenGetAccountNftInfosResponse;
const NftID = _proto.proto.NftID;
exports.NftID = NftID;
const TokenGetNftInfoQuery = _proto.proto.TokenGetNftInfoQuery;
exports.TokenGetNftInfoQuery = TokenGetNftInfoQuery;
const TokenNftInfo = _proto.proto.TokenNftInfo;
exports.TokenNftInfo = TokenNftInfo;
const TokenGetNftInfoResponse = _proto.proto.TokenGetNftInfoResponse;
exports.TokenGetNftInfoResponse = TokenGetNftInfoResponse;
const TokenGetNftInfosQuery = _proto.proto.TokenGetNftInfosQuery;
exports.TokenGetNftInfosQuery = TokenGetNftInfosQuery;
const TokenGetNftInfosResponse = _proto.proto.TokenGetNftInfosResponse;
exports.TokenGetNftInfosResponse = TokenGetNftInfosResponse;
const Response = _proto.proto.Response;
exports.Response = Response;
const CryptoService = _proto.proto.CryptoService;
exports.CryptoService = CryptoService;
const FileService = _proto.proto.FileService;
exports.FileService = FileService;
const FreezeService = _proto.proto.FreezeService;
exports.FreezeService = FreezeService;
const ConsensusTopicQuery = _proto.proto.ConsensusTopicQuery;
exports.ConsensusTopicQuery = ConsensusTopicQuery;
const ConsensusTopicResponse = _proto.proto.ConsensusTopicResponse;
exports.ConsensusTopicResponse = ConsensusTopicResponse;
const MirrorConsensusService = _proto.proto.MirrorConsensusService;
exports.MirrorConsensusService = MirrorConsensusService;
const NetworkService = _proto.proto.NetworkService;
exports.NetworkService = NetworkService;
const ScheduleService = _proto.proto.ScheduleService;
exports.ScheduleService = ScheduleService;
const SmartContractService = _proto.proto.SmartContractService;
exports.SmartContractService = SmartContractService;
const ThrottleGroup = _proto.proto.ThrottleGroup;
exports.ThrottleGroup = ThrottleGroup;
const ThrottleBucket = _proto.proto.ThrottleBucket;
exports.ThrottleBucket = ThrottleBucket;
const ThrottleDefinitions = _proto.proto.ThrottleDefinitions;
exports.ThrottleDefinitions = ThrottleDefinitions;
const TokenService = _proto.proto.TokenService;
exports.TokenService = TokenService;
const SignedTransaction = _proto.proto.SignedTransaction;
exports.SignedTransaction = SignedTransaction;
const TransactionList = _proto.proto.TransactionList;
exports.TransactionList = TransactionList;
const DoubleValue = _proto.proto.DoubleValue;
exports.DoubleValue = DoubleValue;
const FloatValue = _proto.proto.FloatValue;
exports.FloatValue = FloatValue;
const UInt64Value = _proto.proto.UInt64Value;
exports.UInt64Value = UInt64Value;
const UInt32Value = _proto.proto.UInt32Value;
exports.UInt32Value = UInt32Value;
const BoolValue = _proto.proto.BoolValue;
exports.BoolValue = BoolValue;
const StringValue = _proto.proto.StringValue;
exports.StringValue = StringValue;
const BytesValue = _proto.proto.BytesValue;
exports.BytesValue = BytesValue;
const TokenPauseTransactionBody = _proto.proto.TokenPauseTransactionBody;
exports.TokenPauseTransactionBody = TokenPauseTransactionBody;
const TokenUnpauseTransactionBody = _proto.proto.TokenUnpauseTransactionBody;
exports.TokenUnpauseTransactionBody = TokenUnpauseTransactionBody;
const TokenPauseStatus = _proto.proto.TokenPauseStatus;
exports.TokenPauseStatus = TokenPauseStatus;
const FreezeType = _proto.proto.FreezeType;
exports.FreezeType = FreezeType;
